reports/softdtw.log
Traceback (most recent call last):
  File "/Users/tavenard_r/py38_data/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/tavenard_r/py38_data/lib/python3.8/site-packages/nbclient/client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/tavenard_r/py38_data/lib/python3.8/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/tavenard_r/py38_data/lib/python3.8/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/Users/tavenard_r/py38_data/lib/python3.8/site-packages/nbclient/client.py", line 540, in async_execute
    await self.async_execute_cell(
  File "/Users/tavenard_r/py38_data/lib/python3.8/site-packages/nbclient/client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/tavenard_r/py38_data/lib/python3.8/site-packages/nbclient/client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
%config InlineBackend.figure_format = 'svg'
import matplotlib.pyplot as plt
import numpy

plt.ion()

def delannoy(m, n):
  numbers = numpy.zeros((m + 1, n + 1), dtype=numpy.float64)
  numbers[0, 0] = 1
  for i in range(1, m + 1):
    for j in range(1, n + 1):
      numbers[i, j] = numbers[i - 1, j - 1] + numbers[i, j - 1] + numbers[i - 1, j]
  return numbers[1:, 1:]

m = n = 30
delannoy_numbers = delannoy(m, n)
weight_matrix = delannoy_numbers * delannoy_numbers[::-1, ::-1] / delannoy_numbers[-1, -1]

plt.imshow(weight_matrix)
plt.colorbar()
plt.title($A_\infty$)
plt.show()
------------------

[0;36m  File [0;32m"<ipython-input-1-7f650a5060f9>"[0;36m, line [0;32m21[0m
[0;31m    plt.title($A_\infty$)[0m
[0m              ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-7f650a5060f9>, line 21)

